# pda2cfg

./: .editorconfig  .gitignore  Cargo.toml  README.md  test.pda  test2.pda  test3.pda  test4.pda  test5.pda
.github/workflows/: rust.yml
src/: ast.rs  main.rs  old.rs  parser.rs  pda.pest  test.rs
src/lib/: cfg.rs  mod.rs  parser.rs  pda.rs  transformer.rs
src/parser/: ast.rs
tests/: test.cfg  test2.cfg  test3.cfg  test3.pda  test4.cfg  test4.pda  test5.cfg
